# Whisk3D

./: .cproject  .gitignore  .gitmodules  .project  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.es.md  README.md
Linux/: Makefile  (+10 more)
platform/android/: CMakeLists.txt  build.gradle  settings.gradle
platform/android/app/: build.gradle
platform/android/app/distribution/android/app/intermediates/compatible_screen_manifest/debug/createDebugCompatibleScreenManifests/: output-metadata.json
platform/android/app/distribution/android/app/intermediates/dex/debug/mergeExtDexDebug/: classes.dex
platform/android/app/distribution/android/app/intermediates/dex_archive_input_jar_hashes/debug/dexBuilderDebug/: out
platform/android/app/distribution/android/app/intermediates/incremental/debug/mergeDebugResources/: compile-file-map.properties  merger.xml
platform/android/app/distribution/android/app/intermediates/incremental/mergeDebugAssets/: merger.xml
platform/android/app/distribution/android/app/intermediates/incremental/mergeDebugJniLibFolders/: merger.xml
platform/android/app/distribution/android/app/intermediates/linked_resources_binary_format/debug/processDebugResources/: linked-resources-binary-format-debug.ap_
platform/android/app/distribution/android/app/intermediates/manifest_merge_blame_file/debug/processDebugMainManifest/: manifest-merger-blame-debug-report.txt
platform/android/app/distribution/android/app/intermediates/merged_manifest/debug/processDebugMainManifest/: AndroidManifest.xml
platform/android/app/distribution/android/app/intermediates/merged_res/debug/mergeDebugResources/: mipmap-hdpi_ic_launcher.png.flat  mipmap-hdpi_ic_launcher_round.png.flat  mipmap-mdpi_ic_launcher.png.flat  mipmap-mdpi_ic_launcher_round.png.flat  mipmap-xhdpi_ic_launcher.png.flat  mipmap-xhdpi_ic_launcher_round.png.flat  mipmap-xxhdpi_ic_launcher.png.flat  mipmap-xxhdpi_ic_launcher_round.png.flat  mipmap-xxxhdpi_ic_launcher.png.flat  mipmap-xxxhdpi_ic_launcher_round.png.flat  values-af_values-af.arsc.flat  values-am_values-am.arsc.flat  values-ar_values-ar.arsc.flat  values-as_values-as.arsc.flat  values-az_values-az.arsc.flat  values-b+sr+Latn_values-b+sr+Latn.arsc.flat  values-be_values-be.arsc.flat  values-bg_values-bg.arsc.flat  values-bn_values-bn.arsc.flat  values-bs_values-bs.arsc.flat  values-ca_values-ca.arsc.flat  values-cs_values-cs.arsc.flat  values-da_values-da.arsc.flat  values-de_values-de.arsc.flat  values-el_values-el.arsc.flat  values-en-rAU_values-en-rAU.arsc.flat  values-en-rCA_values-en-rCA.arsc.flat  values-en-rGB_values-en-rGB.arsc.flat  values-en-rIN_values-en-rIN.arsc.flat  values-en-rXC_values-en-rXC.arsc.flat  values-es-rUS_values-es-rUS.arsc.flat  values-es_values-es.arsc.flat  values-et_values-et.arsc.flat  values-eu_values-eu.arsc.flat  values-fa_values-fa.arsc.flat  values-fi_values-fi.arsc.flat  values-fr-rCA_values-fr-rCA.arsc.flat  values-fr_values-fr.arsc.flat  (+79 more)
platform/android/app/distribution/android/app/outputs/logs/: manifest-merger-debug-report.txt
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/assets/res/Skins/Blender/: skin.ini
platform/android/app/src/main/cpp/: CMakeLists.txt
platform/android/app/src/main/java/org/whisk3d/: MainActivity.java
platform/android/app/src/main/jni/: CMakeLists.txt
platform/android/app/src/main/res/values/: colors.xml
platform/android/distribution/android/app/intermediates/apk/debug/: app-debug.apk  output-metadata.json
platform/android/distribution/android/app/intermediates/incremental/debug-mergeJavaRes/: merge-state
platform/android/distribution/android/app/intermediates/incremental/debug/mergeDebugResources/: merger.xml
platform/android/distribution/android/app/intermediates/incremental/mergeDebugJniLibFolders/: merger.xml
platform/android/distribution/android/app/intermediates/incremental/mergeDebugShaders/: merger.xml
platform/android/distribution/android/app/intermediates/linked_resources_binary_format/debug/processDebugResources/: linked-resources-binary-format-debug.ap_  output-metadata.json
platform/android/distribution/android/app/intermediates/merged_manifests/debug/processDebugManifest/: output-metadata.json
platform/android/distribution/android/app/intermediates/merged_res/debug/mergeDebugResources/: mipmap-hdpi_ic_launcher.png.flat  mipmap-hdpi_ic_launcher_round.png.flat  mipmap-mdpi_ic_launcher.png.flat  mipmap-mdpi_ic_launcher_round.png.flat  mipmap-xhdpi_ic_launcher_round.png.flat  mipmap-xxhdpi_ic_launcher_round.png.flat  mipmap-xxxhdpi_ic_launcher.png.flat  values-af_values-af.arsc.flat  values-ar_values-ar.arsc.flat  values-b+sr+Latn_values-b+sr+Latn.arsc.flat  values-bg_values-bg.arsc.flat  values-cs_values-cs.arsc.flat  values-da_values-da.arsc.flat  values-de_values-de.arsc.flat  values-en-rAU_values-en-rAU.arsc.flat  values-en-rCA_values-en-rCA.arsc.flat  values-en-rGB_values-en-rGB.arsc.flat  values-en-rIN_values-en-rIN.arsc.flat  values-en-rXC_values-en-rXC.arsc.flat  values-es_values-es.arsc.flat  values-eu_values-eu.arsc.flat  values-fi_values-fi.arsc.flat  values-gl_values-gl.arsc.flat  values-hdpi-v4_values-hdpi-v4.arsc.flat  values-hu_values-hu.arsc.flat  values-hy_values-hy.arsc.flat  values-in_values-in.arsc.flat  values-is_values-is.arsc.flat  values-ja_values-ja.arsc.flat  values-kk_values-kk.arsc.flat  values-km_values-km.arsc.flat  values-ko_values-ko.arsc.flat  values-land_values-land.arsc.flat  values-ldltr-v21_values-ldltr-v21.arsc.flat  values-lo_values-lo.arsc.flat  values-lt_values-lt.arsc.flat  values-lv_values-lv.arsc.flat  values-mk_values-mk.arsc.flat  values-mr_values-mr.arsc.flat  values-ms_values-ms.arsc.flat  (+22 more)
platform/android/distribution/android/app/intermediates/runtime_symbol_list/debug/processDebugResources/: R.txt
platform/android/distribution/android/app/intermediates/stable_resource_ids_file/debug/processDebugResources/: stableIds.txt
platform/android/distribution/android/app/outputs/apk/debug/: output-metadata.json
platform/windows/: CMakeLists.txt  Makefile  Makefile (no va mas)
(+527 files in other folders)
